# MochiMap

./: .env  .gitignore  docker-compose.yml  main.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 044af8cdc1e3_.py  1502e70d658b_.py  19d4c7b15769_.py  52f5cdabe30e_.py  5e442c05c8ec_init.py  62b11e1f4a0b_.py  772c3f6682b3_add_unique_constraint_edges.py  7b69b45dbf12_.py  93eda93c5abb_.py  aff68007eac8_.py  e5135dc9e313_.py
src/: main.py
src/common/: domain_errors.py  error_handling.py  errors.py  memory_monitor.py  openapi.py  pydantic.py
src/common/protocols/: model_mapper.py  use_case.py
src/core/: routes.py
src/core/config/: __init__.py  application.py  auth.py  base.py  db.py
src/dependencies/: base_container.py  config_container.py  container.py  infrastructure_container.py  use_case_container.py
src/infrastructure/adapters/: keycloak.py
src/infrastructure/dependencies/: app_container.py  config_container.py  infrastructure_container.py
src/infrastructure/persistence/: mapper.py  transaction.py  unit_of_work.py
src/infrastructure/persistence/base/: base_entities.py  base_repository.py
src/infrastructure/persistence/connection/: connection.py
src/infrastructure/persistence/models/: __init__.py  base_model.py  connections.py  node.py  resource.py  user.py  user_auth_provider.py
src/infrastructure/persistence/models/connections/: connections.py
src/infrastructure/persistence/transaction/: transaction.py  unit_of_work.py
src/modules/auth/domain/: value_objects.py
src/modules/roadmap/domain/: node.py  roadmap.py  value_objects.py
src/modules/roadmap/infrastructure/: dependencies.py  mapper.py  uow.py
src/modules/roadmap/use_cases/: __init__.py
src/modules/security/infrastructure/: auth_service.py
src/modules/security/use_cases/: __init__.py
tests/: conftest.py  run_tests.py
tests/integration/: conftest.py
tests/integration/middleware/: test_transaction_middleware.py
tests/integration/tests/roadmap/: conftest.py  test_create_roadmap.py
tests/integration/utils/: config.py  create_test_app.py  create_test_db.py  data_generator.py  transaction_manager.py
tests/run_script/: __init__.py  argument_parser.py  database_manager.py  pytest_runner.py  test_runners.py
tests/unit/roadmap/: conftest.py
tests/unit/roadmap/entities/: conftest.py  test_node.py  test_roadmap.py
(+70 files in other folders)
